Fixing Grid Overflow

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .grid-square {
-    flex: 1 0 auto;
+    box-sizing: border-box;
     border: 1px solid #ddd;
 }
 
